// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentPanel preservation — active-execution control bar (running) > preserves the control-bar DOM structure and class-list (snapshot) 1`] = `
<div
  class="shrink-0 flex min-w-0 flex-col border-b border-[#1E1E23] bg-[#101014] row-start-1"
>
  <div
    class="flex min-h-[44px] items-center gap-2.5 px-3 py-1.5"
  >
    <span
      class="w-7 h-7 rounded-lg bg-[rgba(251,146,60,0.12)] border border-[rgba(251,146,60,0.28)] flex items-center justify-center text-[var(--zoc-ember)] shrink-0"
    >
      <span
        class="h-3.5 w-3.5"
        data-icon="Zap"
      />
    </span>
    <div
      class="min-w-0"
    >
      <div
        class="text-[13px] font-semibold leading-tight"
      >
        <span
          class="text-[#FAFAFA]"
        >
          Zoc
        </span>
         
        <span
          class="text-[var(--zoc-ember)]"
        >
          Agent
        </span>
      </div>
      <div
        class="text-[11px] text-[#71717A] leading-tight mt-0.5"
      >
        Auto run · isolated changes
      </div>
    </div>
    <span
      class="ml-auto flex items-center gap-1.5 h-[22px] px-2 rounded-full bg-[hsl(var(--primary)/0.12)] border border-[hsl(var(--primary)/0.3)] shrink-0"
    >
      <span
        class="w-1.5 h-1.5 rounded-full bg-primary animate-pulse-dot"
      />
      <span
        class="text-[11px] font-medium text-primary/85"
      >
        Building…
      </span>
    </span>
    <div
      data-testid="agent-menu-stub"
    />
  </div>
  <div
    class="flex items-center gap-2 px-3 pb-2.5 border-t border-[#1E1E23]/60 pt-2 shrink-0"
  >
    <button
      class="w-7 h-7 rounded-md border border-[#26262B] bg-background/40 hover:bg-[#1B1B21] flex items-center justify-center text-[#A1A1AA] transition-colors shrink-0 disabled:opacity-40 disabled:pointer-events-none"
      title="Pause run"
      type="button"
    >
      <span
        class="w-3 h-3 fill-current text-[#A1A1AA]"
        data-icon="Pause"
      />
    </button>
    <button
      class="w-7 h-7 rounded-md bg-[rgba(248,113,113,0.12)] border border-[rgba(248,113,113,0.3)] hover:bg-[rgba(248,113,113,0.2)] flex items-center justify-center text-[#F87171] transition-colors shrink-0 disabled:opacity-40 disabled:pointer-events-none"
      title="Stop run"
      type="button"
    >
      <span
        class="w-2.5 h-2.5 fill-current"
        data-icon="Square"
      />
    </button>
    <span
      class="font-mono text-[11.5px] text-[#A1A1AA] shrink-0"
    >
      00:00:00
    </span>
    <span
      class="flex items-center gap-1.5 h-6 px-2 rounded-md border border-[#26262B] bg-background/30 shrink-0"
      title="Autonomy level: Medium"
    >
      <span
        class="w-1.5 h-1.5 rounded-full bg-primary"
      />
      <span
        class="text-[11px] text-[#A1A1AA]"
      >
        Medium
      </span>
    </span>
    <span
      class="ml-auto font-mono h-6 max-w-[150px] flex items-center px-2 rounded-md bg-[#15151A] border border-[#1E1E23] text-[10px] text-[#71717A] shrink-0"
      title="anthropic/claude-3-5-sonnet"
    >
      <span
        class="truncate"
      >
        claude-3-5-sonnet
      </span>
    </span>
  </div>
</div>
`;

exports[`AgentPanel preservation — header chrome (idle) > preserves the header DOM structure and class-list (snapshot) 1`] = `
<div
  class="shrink-0 flex min-w-0 flex-col border-b border-[#1E1E23] bg-[#101014] row-start-1"
>
  <div
    class="flex min-h-[44px] items-center gap-2.5 px-3 py-1.5"
  >
    <span
      class="w-7 h-7 rounded-lg bg-[rgba(251,146,60,0.12)] border border-[rgba(251,146,60,0.28)] flex items-center justify-center text-[var(--zoc-ember)] shrink-0"
    >
      <span
        class="h-3.5 w-3.5"
        data-icon="Zap"
      />
    </span>
    <div
      class="min-w-0"
    >
      <div
        class="text-[13px] font-semibold leading-tight"
      >
        <span
          class="text-[#FAFAFA]"
        >
          Zoc
        </span>
         
        <span
          class="text-[var(--zoc-ember)]"
        >
          Agent
        </span>
      </div>
      <div
        class="text-[11px] text-[#71717A] leading-tight mt-0.5"
      >
        Auto run
      </div>
    </div>
    <div
      class="ml-auto flex items-center gap-1.5 shrink-0"
    >
      <span
        class="flex items-center h-[20px] px-2 rounded-full bg-[#1B1B21] border border-[#26262B] text-[10px] font-mono text-muted-foreground shrink-0"
      >
        idle
      </span>
      <div
        data-testid="model-picker-stub"
      />
    </div>
    <div
      data-testid="agent-menu-stub"
    />
  </div>
</div>
`;
